--- a/Kubernetes/secret.yml
+++ b/Kubernetes/secret.yml
@@ -5,5 +5,5 @@ metadata:
 type: Opaque
 data:
   ## Base64 encoded values
-    postgres-user: bWFyaw==
+    postgres-user: cG9zdGdyZXM=
     postgres-password: YWRtaW4=
