--- a/Kubernetes/http-server.yml
+++ b/Kubernetes/http-server.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: http-server
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: http-server
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: http-server
-        image: markbekhet/go-grpc:http-server-1.0
+        image: markbekhet/go-grpc:http-server-1.1
         ports:
         - containerPort: 8080
         env:
@@ -25,6 +25,11 @@ spec:
             configMapKeyRef:
               name: grpc-configmap
               key: grpc-addr
+        - name: grpcPort
+          valueFrom:
+            configMapKeyRef:
+              name: grpc-configmap
+              key: grpc-port
 ---
 apiVersion: v1
 kind: Service
