Create NFS server to persist data

--- a/Kubernetes/config-map.yml
+++ b/Kubernetes/config-map.yml
@@ -4,5 +4,5 @@ metadata:
   name: grpc-configmap
 data:
   grpc-addr: logging-service
-  postgres-addr: postgres-service
+  postgres-addr: postgres
   grpc-port: '5051'
