--- a/Kubernetes/postgres-replica.yml
+++ b/Kubernetes/postgres-replica.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres
+  name: postgres-replica
   labels:
     app: postgres
 spec:
   serviceName: postgres
-  replicas: 3
+  replicas: 3 # You can adjust the number of replicas as needed
   selector:
     matchLabels:
-      app: postgres
+      app: postgres-replica
   template:
     metadata:
       labels:
-        app: postgres
+        app: postgres-replica
     spec:
       containers:
-        - name: postgres
+        - name: postgres-replica
           image: postgres:latest
           ports:
             - containerPort: 5432
@@ -26,6 +26,12 @@ spec:
                 secretKeyRef:
                   name: postgres-secret
                   key: postgres-password
+            - name: POSTGRES_PRIMARY_HOST
+              value: postgres-0.postgres.default.svc.cluster.local
+            - name: POSTGRES_PRIMARY_PORT
+              value: "5432"
+            - name: POSTGRES_REPLICATE_METHOD
+              value: basebackup
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
@@ -33,16 +39,3 @@ spec:
         - name: postgres-data
           persistentVolumeClaim:
             claimName: postgres-pvc
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres
-spec:
-  selector:
-    app: postgres
-  type: NodePort
-  ports:
-    - protocol: TCP
-      port: 5432
-      targetPort: 5432
