--- a/central-logging/templates/http-server-service.yml
+++ b/central-logging/templates/http-server-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: http-server-service
+  name: {{ .Values.httpServer.serviceName }}
 spec:
   selector:
     app: {{ .Values.httpServer.name }} 
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: {{ .Values.httpServer.port0 }}
