--- a/central-logging/templates/ingress.yaml
+++ b/central-logging/templates/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: "minikube-nginx.hellodevops.net"
+    http:
       paths:
       - path: /http
         pathType: Prefix
