--- a/central-logging/templates/ingress.yaml
+++ b/central-logging/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "minikube-nginx.hellodevops.net"
+  - host: "*.hellodevops.net"
     http:
       paths:
       - path: /http
