--- a/central-logging/templates/postgres-pvc.yml
+++ b/central-logging/templates/postgres-pvc.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.postgresPvc.name }}
+  name: {{ .Values.postgres.pvc.name }}
 spec:
   accessModes:
-    - {{ .Values.postgresPvc.access }}
+    - {{ .Values.postgres.pv.access }}
   resources:
     requests:
-      storage: {{ .Values.postgresPvc.storage }}
+      storage: {{ .Values.postgres.pv.capacity }}
