--- a/central-logging/templates/logging-server-service.yml
+++ b/central-logging/templates/logging-server-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.configMap.grpcAddr.value }}
+  name: {{ .Values.loggingServer.serviceName }}
 spec:
   selector:
     app: {{ .Values.loggingServer.name }}
