--- a/central-logging/templates/postgres-service.yml
+++ b/central-logging/templates/postgres-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.configMap.postgresAddr.value }}
+  name: {{ .Values.postgres.serviceName }}
 spec:
   selector:
     app: {{ .Values.postgres.name }}
